--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <a class="nav-link" href="exercicio05.html">Exercício 05</a>
           <a class="nav-link" href="exercicio06.html">Exercício 06</a>
           <a class="nav-link" href="exercicio07.html">Exercício 07</a>
-          <a class="nav-link" href="#">Jogo</a>
+          <a class="nav-link" href="https://jaoxt.github.io/JogoJS/">Jogo</a>
         </div>
       </div>
     </div>
